Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "list(map(lambda restaurant: return restaurant['name'], restaurants))"
+    "lambda restaurant: return restaurant['name'], restaurants))"
    ]
   },
   {
