--- a/index.ipynb
+++ b/index.ipynb
@@ -278,12 +278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-9-c84a1b818e0d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-c84a1b818e0d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
-    "review_counts = None\n",
-    "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
+    "review_counts = list(map(lambda restaurant: len(restaurant['price'], restaurants))\n",
+    "#review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
   {
