--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "total_reviews = map(lambda count: count += count, review_counts)"
+    "total_reviews = map(lambda count: total += count, review_counts)"
    ]
   },
   {
