Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,20 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-d61a7306fee9>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-22-a3bb19bfef8f>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-d61a7306fee9>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    total_reviews = map(lambda count: count += count, review_counts)\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-a3bb19bfef8f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    total_reviews = map(lambda count: total += count, review_counts)\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "total_reviews = map(lambda count: total += count, review_counts)"
+    "total_reviews = map(lambda re: , review_counts)"
    ]
   },
   {
