--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "total_reviews = map(lambda re: , review_counts)"
+    "total_reviews = map(lambda count: review_counts[])"
    ]
   },
   {
