--- a/index.ipynb
+++ b/index.ipynb
@@ -308,20 +308,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-a3bb19bfef8f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-a3bb19bfef8f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    total_reviews = map(lambda count: total += count, review_counts)\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<map at 0x7f12f536f198>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_reviews = map(lambda restaurant: restaurant['review_count'], restaurants))"
+    "total_reviews = map(lambda restaurant: restaurant['review_count'], restaurants)\n",
+    "total_reviews"
    ]
   },
   {
