--- a/index.ipynb
+++ b/index.ipynb
@@ -308,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x7f12f536f198>"
+       "3420"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_reviews = map(lambda restaurant: restaurant['review_count'], restaurants)\n",
+    "total_reviews = sum(map(lambda restaurant: restaurant['review_count'], restaurants))\n",
     "total_reviews"
    ]
   },
