--- a/index.ipynb
+++ b/index.ipynb
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def map_format_restaurants(restaurants):\n",
+    "def map_format_restaurants(restaurants): list\n",
     "    pass"
    ]
   },
