Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -381,8 +381,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def map_format_restaurants(restaurants): list\n",
-    "    pass"
+    "def map_format_restaurants(restaurants):\n",
+    "    map(format_restaurant, restaurants)\n",
+    "    return restaurants"
    ]
   },
   {
