--- a/index.ipynb
+++ b/index.ipynb
@@ -478,6 +478,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    lambda x: \n",
     "    pass"
    ]
   },
