--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    lambda x: \n",
+    "    lambda restaurant: restaurant['is_closed'] != T\n",
     "    pass"
    ]
   },
