Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,23 +473,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-39-bc543c7dfaf7>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-40-6db6229b9394>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-bc543c7dfaf7>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    open = list(filter(lambda, restaurant))\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-6db6229b9394>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    open = list(filter(lambda restaurant, restaurants))\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    lambda restaurant: restaurant['is_closed'] !=true\n",
-    "    open = list(filter(lambda, restaurants))\n",
-    "    pass"
+    "    open = list(filter(lambda restaurant, restaurants))\n",
+    "    "
    ]
   },
   {
