Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,23 +473,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-41-4596d20293d4>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-44-5d8305ab37af>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-4596d20293d4>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    open = list(filter(lambda restaurant, restaurants))\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-44-5d8305ab37af>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return lambda\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    lambda restaurant: restaurant['is_closed'] != true\n",
-    "  filter(lambda restaurant, restaurants)\n",
-    "    return open"
+    "    lambda rest: restaurant['is_closed'] != true\n",
+    "    return lambda re"
    ]
   },
   {
