Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    lambda rest: restaurant['is_closed']\n",
+    "    lambda rest: restaurant['is_closed'] == False\n",
     "    \n",
     "    "
    ]
