Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -492,8 +492,9 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    lambda rest: restaurant['is_closed'] == False\n",
-    "    filter(lambda rest, restaurants)"
+    "    return list(filter(lambda rest: restaurant['is_closed'] == False, restaurants))\n",
+    "    \n",
+    "open_restaurants(restaurants)    "
    ]
   },
   {
