--- a/index.ipynb
+++ b/index.ipynb
@@ -582,7 +582,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    pass"
+    "    list(filter(lambda restaurant: restaurant['price']))"
    ]
   },
   {
